--- a/index.html
+++ b/index.html
@@ -32,7 +32,16 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 
-<h1>TarsosDSP</h1>
+<pre>
+                        _______                       _____   _____ _____  
+                       |__   __|                     |  __ \ / ____|  __ \ 
+                          | | __ _ _ __ ___  ___  ___| |  | | (___ | |__) |
+                          | |/ _` | '__/ __|/ _ \/ __| |  | |\___ \|  ___/ 
+                          | | (_| | |  \__ \ (_) \__ \ |__| |____) | |     
+                          |_|\__,_|_|  |___/\___/|___/_____/|_____/|_|     
+                                                      
+--------------------------*************************************************--------------------------
+</pre>
 <p>TarsosDSP is a collection of classes to do simple audio processing. It features an implementation of a percussion onset detector and three pitch detection algorithms: <span class="caps">YIN</span>, the Mcleod Pitch method and a &#8220;Dynamic Wavelet Algorithm Pitch Tracking&#8221; algorithm. Also included is a Goertzel <acronym title="Dual tone multi frequency"><span class="caps">DTMF</span></acronym> decoding algorithm and a time stretch algorithm (<span class="caps">WSOLA</span>).</p>
 <p>Its aim is to provide a simple interface to some audio (signal) processing algorithms implemented in pure <span class="caps">JAVA</span>. Some <a href="http://tarsos.0110.be/tag/TarsosDSP">TarsosDSP example applications</a> are available.</p>
 <p>The following example filters a band of frequencies of an input file <code>testFile</code>. It keeps the frequencies form <code>startFrequency</code> to <code>stopFrequency</code>.</p>
@@ -87,7 +96,11 @@ Added FastYin implementation by Matthias Mauch<br />
 Added <span class="caps">AMDF</span> pitch estimator by Eder Souza</p>
 <dt>Version 1.2</dt><dd>2012-08-21</dd> 
 <p>Modified the interface of PitchDetector to return a more elaborate result structure with pitch, probability and a boolean &#8220;is pitched&#8221;.<br />
-Added an implementation of an envelope follower or envelope detector.</p>      </section>
+Added an implementation of an envelope follower or envelope detector.</p>
+<dt>Version 1.3</dt><dd>2012-09-19</dd> 
+<p>TarsosDSP can do audio synthesis now. The first simple unit generators are included in the library.<br />
+It has a new audio feature extraction feature, implemented in the FeatureExtractor example. <br />
+Added <span class="caps">ASCII</span>-art to the source code (this is the main TarsosDSP 1.3 feature).</p>      </section>
     </div>
 
     <!-- FOOTER  -->
