Updated index html file.

--- a/index.html
+++ b/index.html
@@ -32,16 +32,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 
-<pre>
-                        _______                       _____   _____ _____  
-                       |__   __|                     |  __ \ / ____|  __ \ 
-                          | | __ _ _ __ ___  ___  ___| |  | | (___ | |__) |
-                          | |/ _` | '__/ __|/ _ \/ __| |  | |\___ \|  ___/ 
-                          | | (_| | |  \__ \ (_) \__ \ |__| |____) | |     
-                          |_|\__,_|_|  |___/\___/|___/_____/|_____/|_|     
-                                                      
---------------------------*************************************************--------------------------
-</pre>
+<h1>TarsosDSP</h1>
 <p>TarsosDSP is a collection of classes to do simple audio processing. It features an implementation of a percussion onset detector and three pitch detection algorithms: <span class="caps">YIN</span>, the Mcleod Pitch method and a &#8220;Dynamic Wavelet Algorithm Pitch Tracking&#8221; algorithm. Also included is a Goertzel <acronym title="Dual tone multi frequency"><span class="caps">DTMF</span></acronym> decoding algorithm and a time stretch algorithm (<span class="caps">WSOLA</span>).</p>
 <p>Its aim is to provide a simple interface to some audio (signal) processing algorithms implemented in pure <span class="caps">JAVA</span>. Some <a href="http://tarsos.0110.be/tag/TarsosDSP">TarsosDSP example applications</a> are available.</p>
 <p>The following example filters a band of frequencies of an input file <code>testFile</code>. It keeps the frequencies form <code>startFrequency</code> to <code>stopFrequency</code>.</p>
