Updated index html file.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,37 @@
+<!DOCTYPE html>
+<html>
+
+  <head>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="TarsosDSP : A set of audio signal processing algorithms in JAVA." />
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>TarsosDSP</title>
+  </head>
+
+  <body>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/JorenSix/TarsosDSP">View on GitHub</a>
+
+          <h1 id="project_title">TarsosDSP</h1>
+          <h2 id="project_tagline">A set of audio signal processing algorithms in JAVA.</h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/JorenSix/TarsosDSP/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/JorenSix/TarsosDSP/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+
 <h1>TarsosDSP</h1>
 <p>TarsosDSP is a collection of classes to do simple audio processing. It features an implementation of a percussion onset detector and three pitch detection algorithms: <span class="caps">YIN</span>, the Mcleod Pitch method and a &#8220;Dynamic Wavelet Algorithm Pitch Tracking&#8221; algorithm. Also included is a Goertzel <acronym title="Dual tone multi frequency"><span class="caps">DTMF</span></acronym> decoding algorithm and a time stretch algorithm (<span class="caps">WSOLA</span>).</p>
 <p>Its aim is to provide a simple interface to some audio (signal) processing algorithms implemented in pure <span class="caps">JAVA</span>, without any external dependencies. Some <a href="http://tarsos.0110.be/tag/TarsosDSP">TarsosDSP example applications</a> are available. Head over to the <a href="http://tarsos.0110.be/releases/TarsosDSP/">TarosDSP release directory</a> for freshly baked binaries.</p>
@@ -61,4 +95,16 @@ Added an implementation of an envelope follower or envelope detector.</p>
 <dt>Version 1.3</dt><dd>2012-09-19</dd> 
 <p>TarsosDSP can do audio synthesis now. The first simple unit generators are included in the library.<br />
 It has a new audio feature extraction feature, implemented in the FeatureExtractor example. <br />
-Added <span class="caps">ASCII</span>-art to the source code (this is the main TarsosDSP 1.3 feature).</p>
+Added <span class="caps">ASCII</span>-art to the source code (this is the main TarsosDSP 1.3 feature).</p>      </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">TarsosDSP maintained by <a href="https://github.com/JorenSix">JorenSix</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+  </body>
+</html>
+
